application/nextjs-app-v4/k8s/nextjs-app-white.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: white-deployment
  labels:
    app: white
    tier: frontend
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: white
      tier: frontend
      version: v2
  template:
    metadata:
      labels:
        app: white
        tier: frontend
        version: v2
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      containers:
      - image: nextjs-app-white:v1.0.0
        name: white-container 
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        securityContext:
          allowPrivilegeEscalation: false
