application/nextjs-app-v4/k8s/nextjs-app-fetch-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-destination
spec:
  host: backend-service 
  subsets:
  - name: v1
    labels:
      version: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mysql-destination
spec:
  host: mysql-service 
  subsets:
  - name: v1
    labels:
      version: v1
