application/nextjs-app-v4/k8s/nextjs-app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nextjs-app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - nextjs-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 3000
    - destination:
        host: frontend-service
        subset: v1
      weight: 40
    - destination:
        host: frontend-service
        subset: v2
      weight: 40
    - destination:
        host: frontend-service
        subset: v3
      weight: 20
